# agoda-chat-with-doc

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  config.py  docker-compose.yml  error_handler.py  file_description.md  indexing.py  main.py  makefile  pyproject.toml  pytest.ini  retrieval.py  schema.py
.chainlit/: config.toml
tests/: README.md  conftest.py  test_indexing.py  test_retrieval.py
